coloquei novas videoaulas sobre a prova 3

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -116,7 +116,7 @@
 					<div>
 					<b>Material:</b>
 						<ul>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button></li>
