coloquei o icone de new para a Lista 03 de ES

--- a/gsi526.html
+++ b/gsi526.html
@@ -89,7 +89,7 @@
 					<li>Prova 3 - 30 pts <b>(12/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i>Aulas 12, 13, 14, 15 e 16</i></li>
 					<li>Lista 1 - 5 pts <b>(01/03)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
 					<li>Lista 2 - 5 pts <b>(29/03)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
-					<li>Lista 3 - 5 pts <b>(12/04)</b></li>
+					<li>Lista 3 - 5 pts <b>(12/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div> 
 					<div>
