--- a/poo.html
+++ b/poo.html
@@ -85,8 +85,8 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(09/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)</li>
-					<li>Prova 2 - 30 pts <b>(23/03)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 06, 07 e 08 </i>)</li>
-					<li>Prova 3 - 30 pts <b>(13/04)</b><!-- <i> Aulas 9, 10, 11 e 12</i> --></li>
+					<li>Prova 2 - 30 pts <b>(23/03)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 06, 07 e 08 </i>)</li>
+					<li>Prova 3 - 30 pts <b>(13/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 9, 10, 11 e 12 </i>)</li>
 					<li>Lista 1 - 7,5 pts <b>(23/03)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
 					<li>Lista 2 - 7,5 pts <b>(13/04)</b><!-- <img src="images/deadline.png" alt="" height="25" width="19"> --></li>
 					</ul>
@@ -104,8 +104,8 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a></li> 
 						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 						
+						<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação </a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/Aula11 - Scrum.pdf"> Aula 11 - Scrum</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/Aula12- Extreme Programming.pdf"> Aula 12 - Programação Extrema (XP)</a></li>
@@ -154,8 +154,8 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=NctjqlfKC0U&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=25"> Polimorfismo em Java </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=hYek1xqWzgs&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=26"> Conceito de Polimorfismo </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=b7xGYh3NHZU&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=27"> Polimorfismo e Sobrecarga </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Idiomas de Programação </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> UML em 42 minutos </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Idiomas de Programação </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> UML em 42 minutos </a> <img src="images/new2.gif" alt="" height="11" width="28"></li> -->
 					</ul>
 					</div>  
 					<div>
