--- a/poo.html
+++ b/poo.html
@@ -87,8 +87,8 @@
 					<li>Prova 1 - 25 pts <b>(09/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)</li>
 					<li>Prova 2 - 30 pts <b>(23/03)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 06, 07 e 08 </i>)</li>
 					<li>Prova 3 - 30 pts <b>(13/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 9, 10, 11 e 12 </i>)</li>
-					<li>Lista 1 - 7,5 pts <b>(23/03)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
-					<li>Lista 2 - 7,5 pts <b>(13/04)</b><!-- <img src="images/deadline.png" alt="" height="25" width="19"> --></li>
+					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(23/03)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
+					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(13/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>					
 					</ul>
 					</div>  
 					<b>Material:</b> 
@@ -158,16 +158,16 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> UML em 42 minutos </a> <img src="images/new2.gif" alt="" height="11" width="28"></li> -->
 					</ul>
 					</div>  
-					<div>
+					<!--<div>
 					<b>Links diversos:</b>
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a></li> 
-					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> -->
-					<!--<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> -->
+					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> 
+					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 (Entrega: <b>23/03</b>) <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 (Entrega: <b>13/04</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					</ul>
-					</div> 
+					</div>--> 
 				</div>
 			</div>
 		</div>
