--- a/gsi526.html
+++ b/gsi526.html
@@ -140,17 +140,18 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10.pdf"> Aula 10</a></button></li>
 						</ul> -->
 					</div>
-					<!--<div>
+					<div>
 					<b>Aulas Síncronas Gravadas no Teams:</b> 
 					<ul>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79669"> Aula 01 - Requisitos de Software</a></li>
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79669"> Aula 01 - Requisitos de Software</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79675"> Aula 02 - Processos de Software</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99340"> Aula 03 - Tecnologias para desenvolvimento Web</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99860"> Aula 04 - Aula sobre Web Services</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=100564"> Aula 05 - Versionamento de Software com Git</a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=101232"> Aula 06 - Refactorings e Code Smells</a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=101232"> Aula 06 - Refactorings e Code Smells</a></li> -->
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/hFUhSxrIMYs"> Aula de Exercícios sobre DevOps e Padrões de Projeto (Dia <b>08/04</b>)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
-					</div> -->
+					</div> 
 					<div>
 					<b>Listas:</b> 
 					<ul>
