--- a/poo.html
+++ b/poo.html
@@ -91,10 +91,10 @@
 					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(13/04)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>					
 					</ul>
 					</div>  
-					<!--<b>Material:</b> -->
+					<b>Material:</b> 
 					<div>
 						<ul>	
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
@@ -139,9 +139,9 @@
 						</ul>
 					</div> 
 					<div>
-					<!-- <b>Videoaulas:</b> -->
+					<b>Videoaulas:</b> 
 					<ul>
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=LV2243j4RTQ&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=7"> Configurando Visibilidade de Atributos e Métodos </a></li>
