Tirei os slides do ar para a Prova 1 de PC2

--- a/poo.html
+++ b/poo.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(15/06)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
+					<li>Prova 1 - 25 pts <b>(15/06)</b> Hoje às 13h! <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
 					<li>Prova 2 - 30 pts <b>(20/07)</b> <!-- <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 05, 06, 07 e 08 </i>) --></li>
 					<li>Prova 3 - 30 pts <b>(31/08)</b> <!-- <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 9, 10, 11 e 12 </i>) --></li>
 					<li>Lista 01 - 7,5 pts <b>(20/07)</b> </li>
@@ -96,11 +96,11 @@
 					<b>Material:</b> 
 					<div>
 						<ul>	
-						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a></li> 
