Material de ES enabled

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -118,7 +118,7 @@
 					</ul>
 					</ul>
 					</div> -->
-					<!--<div>
+					<div>
 					<b>Material:</b>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
@@ -144,9 +144,9 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_es_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais</b></a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>			
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li> 
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li> -->
 						</ul> 
-					</div> -->
+					</div> 
 					<div>
 					<b>Videoaulas:</b>
 					<ul>
