Segundo Trabalho de Laboratorio de ES

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -89,14 +89,14 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Trabalho 1 - 30 pts <b>(30/06)</b> <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
-					<li>Trabalho 2 - 30 pts <b>(28/07)</b> </li>
-					<li>Trabalho 3 - 30 pts <b>(01/09)</b> </li>
-					<li>Vídeo - 10 pts <b>(01/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<!-- <li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1 - 30 pts</a></i> - <b>(Data de Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>-->
-					<!--<li><i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2 - 70 pts</a></i> - <b>(Próxima Entrega: 24/03)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li>Trabalho 2 - 70 pts <b>(28/07)</b> <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
+					<!--<li>Trabalho 3 - 30 pts <b>(01/09)</b> </li>
+					<li>Vídeo - 10 pts <b>(01/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li> -->
+					<!--<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1 - 30 pts</a></i> - <b>(Data de Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>-->
+					<!--<li><i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2 - 70 pts</a></i> - <b>(Próxima Entrega: 28/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<ul>
-					<li>Diagrama de Casos de Uso - 10 pts <b>(24/03)</b> - <i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
-					<li>Apresentação do Sistema  - 60 pts <b>(14/04)</b> - <i><a href="aulas/lab-programacao/notas_trabalho2_fase2.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li> -->
+					<li><u>Fase 1:</u> Diagrama de Classes do Sistema - 10 pts <b>(28/07)</b> <!-- - <i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li>
+					<li><u>Fase 2:</u> Apresentação do Sistema  - 60 pts <b>(01/09)</b> <!-- - <i><a href="aulas/lab-programacao/notas_trabalho2_fase2.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li> 
 					<!-- <li><i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas do Trabalho 2 (Fase 1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li> -->
 					</ul>
 					</ul> 
