Proposta de Temas de TCC - Eduardo

--- a/gsi526.html
+++ b/gsi526.html
@@ -76,9 +76,10 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-					<b>Plano:</b>
+					<b>Plano e Temas:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/plano-didatico-es.pdf"> Plano Didático</a></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2021.pdf"> Temas de TCC (2021-2)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div> 
 					<div>
