Links para cursos de JavaScript

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -162,13 +162,15 @@
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/Cars.zip"> Cars GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li> -->
-					<li><i class="icon-stackoverflow"></i><a href="https://programacaodescomplicada.wordpress.com/indice/python/"> <img src="images/new2.gif" alt="" height="11" width="28"> Curso gratuito de Python</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="https://evolutio.io/"> <img src="images/new2.gif" alt="" height="11" width="28"> Cursos gratuitos de JavaScript e o framework Vue.js</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw&t=714s"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaula sobre como criar um Blog usando Node.js (Back-end) e React.js (Front-end)</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg&list=PLQCmSnNFVYnTD5p2fR4EXmtlR6jQJMbPb"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaulas sobre AngularJS</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=-YlK0A8Goj8"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaula sobre Django 2 Web Framework (Python)</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=R-F-UcDo_5I&list=PL62G310vn6nF3gssjqfCKLpTK2sZJ_a_1"> <img src="images/new2.gif" alt="" height="11" width="28"> Curso Completo do framework Java Spring Boot</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=Dzuiy-JNi-E"> <img src="images/new2.gif" alt="" height="11" width="28"> Criando um Blog com Python e o framework Django</a></li> 
+					<li><i class="icon-stackoverflow"></i><a href="https://programacaodescomplicada.wordpress.com/indice/python/"> <img src="images/new2.gif" alt="" height="11" width="28"> [Python] Curso gratuito de Python</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=-YlK0A8Goj8"> <img src="images/new2.gif" alt="" height="11" width="28"> [Python] Videoaula sobre Django 2 Web Framework</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=Dzuiy-JNi-E"> <img src="images/new2.gif" alt="" height="11" width="28"> [Python] Criando um Blog com Python e o framework Django</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://evolutio.io/curso/ngmasters_javascript"> <img src="images/new2.gif" alt="" height="11" width="28"> [JavaScript] Curso Completo de JavaScript</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://evolutio.io/curso/minicurso_vuejs"> <img src="images/new2.gif" alt="" height="11" width="28"> [JavaScript] Curso de Vue.js para Completos Iniciantes</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=ErjWNvP6mko"> <img src="images/new2.gif" alt="" height="11" width="28"> [JavaScript] Curso de React para Completos Iniciantes</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg&list=PLQCmSnNFVYnTD5p2fR4EXmtlR6jQJMbPb"> <img src="images/new2.gif" alt="" height="11" width="28"> [JavaScript] Curso de AngularJS para Completos Iniciantes</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw&t=714s"> <img src="images/new2.gif" alt="" height="11" width="28"> [JavaScript] Videoaula sobre como criar um Blog usando Node.js e React</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=R-F-UcDo_5I&list=PL62G310vn6nF3gssjqfCKLpTK2sZJ_a_1"> <img src="images/new2.gif" alt="" height="11" width="28"> [Java] Curso Completo do framework Java Spring Boot</a></li>
 					</ul>
 					</div> 
 					<div>
